--- a/configuration/system/bind/named.inc.in
+++ b/configuration/system/bind/named.inc.in
@@ -22,6 +22,12 @@ zone "mattatobin.com" {
     allow-query { any; };
 };
 
+zone "hiddenpalace.zone" {
+    type master;
+    file "/@BIND_CONF_PREFIX@/hiddenpalace.zone.zone";
+    allow-query { any; };
+};
+
 zone "royalgeekworld.com" {
     type master;
     file "/@BIND_CONF_PREFIX@/royalgeekworld.com.zone";
@@ -43,5 +49,11 @@ zone "susantobinart.com" {
 zone "kokomosaferefuge.org" {
     type master;
     file "/@BIND_CONF_PREFIX@/kokomosaferefuge.org.zone";
+    allow-query { any; };
+};
+
+zone "sage2012.org" {
+    type master;
+    file "/@BIND_CONF_PREFIX@/sage2012.org.zone";
     allow-query { any; };
 };
