Setup class binoc user hiddenpalace and associated services

--- a/configuration/binoc/CMakeLists.txt
+++ b/configuration/binoc/CMakeLists.txt
@@ -7,5 +7,6 @@ add_subdirectory(binocnetwork)
 if(varTargetServerQuartz)
 add_subdirectory(binaryoutcast)
 add_subdirectory(newtobinparadigm)
+add_subdirectory(hiddenpalace)
 add_subdirectory(royalgeekworld)
 endif()
