Setup class unaffiliated user sagexpo and associated services

--- a/configuration/unaffiliated/CMakeLists.txt
+++ b/configuration/unaffiliated/CMakeLists.txt
@@ -5,3 +5,4 @@ set(varUserClass "unaffiliated")
 add_subdirectory(dovedesign)
 add_subdirectory(kokomosaferefuge)
 add_subdirectory(ratty)
+add_subdirectory(sagexpo)
