Do not use proxy_buffering for local servers | Bypasses the default 1GB limit on file transfers

--- a/templates/nginx/nginx.conf.in
+++ b/templates/nginx/nginx.conf.in
@@ -16,6 +16,7 @@ http {
         '$status $body_bytes_sent "$http_referer" '
         '"$http_user_agent" "$http_x_forwarded_for"';
     client_max_body_size 100m;
+    proxy_buffering off;
     include /aura/configuration/system/nginx/mime-types.inc;
 #ifdef NGX_GLOBAL
     server {
