https://github.com/Pale-Moon-Addons-Team/phoebus/issues/18 | Update addons.palemoon.org config for Phoebus

--- a/configuration/mcp/palemoon/nginx/CMakeLists.txt
+++ b/configuration/mcp/palemoon/nginx/CMakeLists.txt
@@ -40,8 +40,8 @@ set(varNginxDefines
     -DNGX_ENABLE_CLOUDFLARE=1
     -DNGX_INCLUDE="${mk_srcdir}/${varSubDomain}.${varRootDomain}.vhost.inc"
     -DNGX_ENABLE_PHP=1
-    -DNGX_ENABLE_CMSMS=1
-    -DPHP_VERSION_56=1
+    -DNGX_ENABLE_PHOEBUS=1
+    -DPHP_VERSION_70=1
 )
 
 # Proxy file
