Don't build apache configuration for binocnetwork when not on quartz

--- a/configuration/binoc/binocnetwork/CMakeLists.txt
+++ b/configuration/binoc/binocnetwork/CMakeLists.txt
@@ -3,5 +3,7 @@ set(varUserName "binocnetwork")
 set(varUserID "1200")
 
 add_subdirectory(nginx)
-add_subdirectory(apache)
+if(varTargetServerQuartz)
+    add_subdirectory(apache)
+endif()
 add_subdirectory(php)
