--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,18 +34,19 @@ if((BINOC_BUILD) AND (NOT CMAKE_BINARY_DIR MATCHES CMAKE_SOURCE_DIR))
             -DAURA_USER_CLASS="${varUserClass}"
             -DAURA_USER_NAME="${varUserName}"
             -DAURA_USER_ID="${varUserID}"
-            -DAURA_USER_PORT0="${varUserID}0"
-            -DAURA_USER_PORT1="${varUserID}1"
-            -DAURA_USER_PORT2="${varUserID}2"
-            -DAURA_USER_PORT3="${varUserID}3"
-            -DAURA_USER_PORT4="${varUserID}4"
-            -DAURA_USER_PORT5="${varUserID}5"
-            -DAURA_USER_PORT6="${varUserID}6"
-            -DAURA_USER_PORT7="${varUserID}7"
-            -DAURA_USER_PORT8="${varUserID}8"
-            -DAURA_USER_PORT9="${varUserID}9"
+            -DAURA_USER_PORT0="${varUserID}0" # Reserved
+            -DAURA_USER_PORT1="${varUserID}1" # Icecast
+            -DAURA_USER_PORT2="${varUserID}2" # Standard FTP
+            -DAURA_USER_PORT3="${varUserID}3" # Not Defined
+            -DAURA_USER_PORT4="${varUserID}4" # Not Defined
+            -DAURA_USER_PORT5="${varUserID}5" # Not Defined
+            -DAURA_USER_PORT6="${varUserID}6" # IRC or ZNC
+            -DAURA_USER_PORT7="${varUserID}7" # Alt Webserver or uWSGI
+            -DAURA_USER_PORT8="${varUserID}8" # NGINX User Instance
+            -DAURA_USER_PORT9="${varUserID}9" # PHP-FPM
         )
     endmacro(AURA_DEFINES)
+
     ### If the build script variable is not blank then evaluate it
     if (AURA_SERVER_TARGET)
         if(AURA_SERVER_TARGET MATCHES "quartz")
