Use user ports for remi php7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ if((BINOC_BUILD) AND (NOT CMAKE_BINARY_DIR MATCHES CMAKE_SOURCE_DIR))
             -DAURA_USER_PORT4="${varUserID}4" # Not Defined
             -DAURA_USER_PORT5="${varUserID}5" # Not Defined
             -DAURA_USER_PORT6="${varUserID}6" # IRC or ZNC
-            -DAURA_USER_PORT7="${varUserID}7" # Alt Webserver or uWSGI
+            -DAURA_USER_PORT7="${varUserID}7" # Alt Gateway (uWSGI/Old PHP/Apache)
             -DAURA_USER_PORT8="${varUserID}8" # NGINX User Instance
             -DAURA_USER_PORT9="${varUserID}9" # PHP-FPM
         )
