--- a/templates/nginx/standard.vhost.in
+++ b/templates/nginx/standard.vhost.in
@@ -58,7 +58,7 @@
 #ifdef PHP_VERSION_56
             fastcgi_pass unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php56.socket;
 #elif PHP_VERSION_70
-            fastcgi_pass unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php70.socket;
+            fastcgi_pass 127.0.0.1:@AURA_USER_PORT9@;
 #else
             fastcgi_pass unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php.socket;
 #endif
