--- a/templates/php/php-pool.conf.in
+++ b/templates/php/php-pool.conf.in
@@ -3,7 +3,7 @@
 #ifdef PHP_VERSION_56
 listen = /var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php56.socket
 #elif PHP_VERSION_70
-listen = /var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php70.socket
+listen = 127.0.0.1:@AURA_USER_PORT9@
 #else
 listen = /var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php.socket
 #endif
