Enable ability to set high nginx workers and enable it on regolith and user palemoon instance

--- a/configuration/system/nginx/CMakeLists.txt
+++ b/configuration/system/nginx/CMakeLists.txt
@@ -18,12 +18,22 @@ build_func_preprocess(
     -DNGX_GLOBAL=1
 )
 
-# Userscope Nginx Server Instance
-build_func_preprocess(
-    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
-    ${FINAL_TARGET}/nginx.conf
-    ${varAuraDefines}
-    -DNGX_GLOBAL=1
-)
+    # Userscope Nginx Server Instance
+if(varTargetServerQuartz)
+    build_func_preprocess(
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
+        ${FINAL_TARGET}/nginx.conf
+        ${varAuraDefines}
+        -DNGX_GLOBAL=1
+    )
+elseif(varTargetServerRegolith)
+    build_func_preprocess(
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
+        ${FINAL_TARGET}/nginx.conf
+        ${varAuraDefines}
+        -DNGX_GLOBAL=1
+        -DNGX_HIGH_WORKERS=1
+    )
+endif()
 
 add_subdirectory(certs)
