Don't use ports in redirects in standard vhost

--- a/templates/nginx/standard.vhost.in
+++ b/templates/nginx/standard.vhost.in
@@ -17,6 +17,7 @@
         autoindex off;
 #endif
         access_log off;
+        port_in_redirect off;
 
 #ifdef NGX_INCLUDE
 #include @NGX_INCLUDE@
