--- a/templates/nginx/standard.vhost.in
+++ b/templates/nginx/standard.vhost.in
@@ -53,6 +53,7 @@
             include /aura/configuration/system/nginx/standard-php.inc;
 #ifndef NGX_ENABLE_PHP_404
             fastcgi_intercept_errors on;
+            fastcgi_buffering off;
             error_page 404 = @404;
 #endif
 #ifdef PHP_VERSION_56
