More moving things around...

--- a/config/CMakeLists.txt
+++ b/config/CMakeLists.txt
@@ -1,14 +1,7 @@
-# Set directories
+# Set information about this user
+set(varUserName "regolith")
+set(varUserID "1100")
 
-### These are always included
-### Subdirectories under 'binoc' are specific to BinOC save for 'binocnetwork' as it is global
-add_subdirectory(system)
-add_subdirectory(binoc)
-
-### These are specific to BinOC
-if(varTargetServerQuartz)
-    add_subdirectory(staff)
-    add_subdirectory(unaffiliated)
-elseif(varTargetServerRegolith)
-    add_subdirectory(mcp)
-endif()
+add_subdirectory(nginx)
+add_subdirectory(php)
+add_subdirectory(vsftpd)
