--- a/config/vsftpd/vsftpd.conf
+++ b/config/vsftpd/vsftpd.conf
@@ -17,13 +17,13 @@ virtual_use_local_privs=YES
 write_enable=YES
 
 # the PAM file used by authentication of virtual uses
-pam_service_name=aura-mcp-palemoon-vsftpd
+pam_service_name=regolith-vsftpd
 userlist_enable=YES
 
 # in conjunction with .local_root.,
 # specifies a home directory for each virtual user
 user_sub_token=$USER
-local_root=/aura/accounts/mcp/palemoon/ftp/$USER
+local_root=/regolith/account/ftp/$USER
 anon_root=/var/www/ftp
 
 # the virtual user is restricted to the virtual FTP area
@@ -51,7 +51,7 @@ connect_from_port_20=YES
 local_umask=022
 
 # Restrict connections
-max_clients=20
+max_clients=500
 max_per_ip=10
 
 
@@ -59,10 +59,10 @@ max_per_ip=10
 secure_chroot_dir=/usr/share/empty
 
 #Virtual user
-nopriv_user=palemoon
+nopriv_user=regolith
 force_dot_files=YES
 tcp_wrappers=NO
-guest_username=palemoon
+guest_username=regolith
 anon_mkdir_write_enable=YES
 anon_other_write_enable=YES
 anon_upload_enable=YES
