Fix vsftpd generation

--- a/config/vsftpd/CMakeLists.txt
+++ b/config/vsftpd/CMakeLists.txt
@@ -12,6 +12,6 @@ COPY_TO_DIST("${SOURCE_FILES}")
 
 build_func_preprocess(
     vsftpd.service
-    ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-vsftpd.service
+    ${FINAL_TARGET}/${varUserName}-vsftpd.service
     ${varAuraDefines}
 )
