--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,7 @@
+build_macro_mkPaths()
+FIND_FINAL_TARGET()
+AURA_DEFINES()
+
 # Set information about this user
 set(varUserName "regolith")
 set(varUserID "1100")
