Get PHP to generate

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,5 +7,5 @@ set(varUserName "regolith")
 set(varUserID "1100")
 
 #add_subdirectory(nginx)
-#add_subdirectory(php)
+add_subdirectory(php)
 add_subdirectory(vsftpd)
