Get nginx to generate

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,6 @@ AURA_DEFINES()
 set(varUserName "regolith")
 set(varUserID "1100")
 
-#add_subdirectory(nginx)
+add_subdirectory(nginx)
 add_subdirectory(php)
 add_subdirectory(vsftpd)
