Setup regolith.palemoon.org as a real thing

--- a/src/nginx/CMakeLists.txt
+++ b/src/nginx/CMakeLists.txt
@@ -95,19 +95,21 @@ set(varRootDomain "palemoon.org")
 set(varSubDomain "regolith")
 set(varNginxDefines
     ${varAuraDefines}
+    -DNGX_SSL_CERT="${varRootDomain}"
     -DNGX_ROOTDOMAIN="${varRootDomain}"
     -DNGX_SUBDOMAIN="${varSubDomain}"
     -DNGX_ENABLE_SSL=1
+    -DNGX_SSL_CERT="${varRootDomain}"
+    -DNGX_ENABLE_PHP=1
+    -DPHP_VERSION_70=1
     -DNGX_ENABLE_HTPASSWD=1
     -DNGX_HTPASSWD_REALM="Regolith"
     -DNGX_HTPASSWD_FILE="regolith-admin.htpasswd"
-    -DNGX_PROXY_ADDRESS="http://127.0.0.1:30015"
-    -DNGX_SSL_CERT="${varRootDomain}"
 )
 
 # VHost file
 build_func_preprocess(
-    standard.proxy.in
+    standard.server.in
     ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.server
     ${varNginxDefines}
 )
