--- a/src/nginx/standard.server.in
+++ b/src/nginx/standard.server.in
@@ -87,6 +87,8 @@
 #endif
 #ifdef PHP_VERSION_70
             fastcgi_pass 127.0.0.1:@AURA_USER_PORT9@;
+#elif PHP_VERSION_72
+            fastcgi_pass 127.0.0.1:@AURA_USER_PORT7@;
 #else
             fastcgi_pass unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php.socket;
 #endif
