--- a/src/php/php-pool.conf.in
+++ b/src/php/php-pool.conf.in
@@ -2,6 +2,8 @@
 
 #ifdef PHP_VERSION_70
 listen = 127.0.0.1:@AURA_USER_PORT9@
+#elif PHP_VERSION_72
+listen = 127.0.0.1:@AURA_USER_PORT7@
 #else
 listen = /var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-php.socket
 #endif
